# werii-gather

./: .gitignore  README.md  pyproject.toml  render.yaml
backend/: requirements.txt
backend/app/: config.py  db.py  main.py  models.py
backend/app/importers/: __init__.py  chatgpt_json.py  claude_html.py  copilot_html.py  grok_json.py
backend/app/jobs/: daily.py
backend/scripts/: import_exports.py  run_daily.sh
conversations/: conversation-1.md  conversation-10.md  conversation-100.md  conversation-101.md  conversation-102.md  conversation-103.md  conversation-104.md  conversation-105.md  conversation-106.md  conversation-107.md  conversation-108.md  conversation-109.md  conversation-11.md  conversation-110.md  conversation-111.md  conversation-112.md  conversation-113.md  conversation-114.md  conversation-115.md  conversation-116.md  conversation-117.md  conversation-118.md  conversation-119.md  conversation-12.md  conversation-120.md  conversation-121.md  conversation-122.md  conversation-123.md  conversation-124.md  conversation-125.md  conversation-126.md  conversation-127.md  conversation-128.md  conversation-129.md  conversation-13.md  conversation-130.md  conversation-131.md  conversation-132.md  conversation-133.md  conversation-134.md  (+395 more)
deploy/launchd/: com.werii.gather.daily.plist
graphs/: connected-thoughts.md
src/werii_gather/: __init__.py  cli.py  db.py  importers.py  metrics.py
src/werii_gather.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_db.py  test_importers.py  test_metrics.py
(+5 files in other folders)
